# openrat

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish.yml  test.yml  test_publish.yml
core/: __init__.py
docs/: AGENT_LOOP.md  EXECUTOR_POLICY.md
examples/: chat_agent.py  custom_tool.py  framework_workflow.py  run_experiment.py
executors/: __init__.py  base_executor.py  docker_executor.py  local_executor.py  registry.py
governance/: __init__.py
model/: __init__.py  agent_loop.py  factory.py  types.py
model/adapters/: claude_adapter.py  gemini_adapter.py  oai_adapter.py
openrat/: __init__.py  __main__.py  cli.py  errors.py  protocols.py
openrat/api/: __init__.py  openrat.py  runner.py
openrat/core/: __init__.py  artifact.py  experiment_spec.py  instructions.py  sessions.py
openrat/executors/: __init__.py  base_executor.py  docker_executor.py  local_executor.py  registry.py
openrat/model/: __init__.py  agent_loop.py  factory.py  types.py
openrat/sandbox/: __init__.py  exec.py
openrat/tools/: __init__.py  base.py  executor.py  file_inspector.py  log_reader.py  patch_proposal.py  registry.py
openrat/ui/: __init__.py  cli.py
sandbox/: __init__.py  exec.py
src/openrat/: __init__.py  __main__.py
src/ui/: cli.py
tasks/: __init__.py
tests/: conftest.py
tests/integration/: test_agent_loop.py  test_agent_tool_flow.py  test_e2e_docker.py  test_integration_executors.py  test_openrat_agent.py  (+1 more)
tools/: __init__.py  base.py  executor.py  registry.py
ui/: __init__.py  cli.py
(+67 files in other folders)
